// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox inputProps should pass through other props to the input 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    data-automation="first-name-field"
    id="still-in-role"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="still-in-role"
  >
    <div
      className="standard"
    >
      <CheckMarkIcon
        className="checkBox checkBoxLeft"
        svgClassName="checkMark"
      />
      <span>
        Still in role
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox inputProps should render as checked 1`] = `
<div
  className="root"
>
  <input
    checked={true}
    className="input"
    id="still-in-role"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="still-in-role"
  >
    <div
      className="standard"
    >
      <CheckMarkIcon
        className="checkBox checkBoxLeft checked"
        svgClassName="checkMark"
      />
      <span>
        Still in role
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render full width checkbox 1`] = `
<div
  className="root fullWidth"
>
  <input
    checked={false}
    className="input"
    id="still-in-role"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="still-in-role"
  >
    <div
      className="standard"
    >
      <CheckMarkIcon
        className="checkBox checkBoxLeft"
        svgClassName="checkMark"
      />
      <span>
        Still in role
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with button style 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    id="still-in-role"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="still-in-role"
  >
    <span
      className="button"
    >
      Still in role
    </span>
  </label>
</div>
`;

exports[`Checkbox should render with checkbox on left hand side 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    id="still-in-role"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="still-in-role"
  >
    <div
      className="standard"
    >
      <CheckMarkIcon
        className="checkBox checkBoxLeft"
        svgClassName="checkMark"
      />
      <span>
        Still in role
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with checkbox on right hand side 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    id="still-in-role"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="still-in-role"
  >
    <div
      className="standard"
    >
      <span>
        Still in role
      </span>
      <CheckMarkIcon
        className="checkBox checkBoxRight"
        svgClassName="checkMark"
      />
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with className 1`] = `
<div
  className="root testClassname"
>
  <input
    checked={false}
    className="input"
    id="still-in-role"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="still-in-role"
  >
    <div
      className="standard"
    >
      <CheckMarkIcon
        className="checkBox checkBoxLeft"
        svgClassName="checkMark"
      />
      <span>
        Still in role
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with simple props 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    id="still-in-role"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="still-in-role"
  >
    <div
      className="standard"
    >
      <CheckMarkIcon
        className="checkBox checkBoxLeft"
        svgClassName="checkMark"
      />
      <span>
        Still in role
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with standard checkbox style 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    id="still-in-role"
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="still-in-role"
  >
    <div
      className="standard"
    >
      <CheckMarkIcon
        className="checkBox checkBoxLeft"
        svgClassName="checkMark"
      />
      <span>
        Still in role
      </span>
    </div>
  </label>
</div>
`;
